--- a/games/Checkers/index.html
+++ b/games/Checkers/index.html
@@ -26,44 +26,69 @@
       let windowWidth = window.innerWidth;
       let windowHeight = window.innerHeight;
 
-      let canvas = new createCanvas(windowWidth, windowHeight, "border:1px dotted black;background:#b58863;");
+      let canvas = new createCanvas(windowWidth, windowHeight, "border:1px dotted black;background: green;");
 
       // middle box
-      let midRect = new Rectangle(0, windowHeight * 0.5 - windowWidth * 0.5, windowWidth - 2, windowWidth, "black", "#f0d9b5");
+      let midRectImage = new SpriteImage("images/woodTexture.jpg",0, windowHeight * 0.5 - windowWidth * 0.5, windowWidth - 2, windowWidth, "black", "#f0d9b5");
 
-      // players
-      let playerOneSection = new Rectangle(0, windowHeight * 0.10, windowWidth, windowHeight * 0.1, "black", "black");
-      let playerOneFace = new Rectangle(windowWidth - windowHeight * 0.1, windowHeight * 0.10, windowHeight * 0.1, windowHeight * 0.1, "white", "white");
+      // players 1
+      let playerOneSection = new Rectangle(0, windowHeight * 0.10, windowWidth, windowHeight * 0.1, "black", "transparent");
+      let playerOneFaceImage = new SpriteImage('images/Box.png',0, windowHeight * 0.1, windowHeight * 0.1, windowHeight * 0.1);
 
-      let playerTwoSection = new Rectangle(0, windowHeight * 0.90 - windowHeight * 0.1, windowWidth, windowHeight * 0.1, "black", "black");
-      let playerTwoFace = new Rectangle(0, windowHeight * 0.90 - windowHeight * 0.1, windowHeight * 0.1, windowHeight * 0.1, "white", "white");
+      // players 2
+      let playerTwoSection = new Rectangle(0, windowHeight * 0.90 - windowHeight * 0.1, windowWidth, windowHeight * 0.1, "black", "transparent");
+      let playerTwoFaceImage = new SpriteImage("images/Box.png",windowWidth - windowHeight * 0.1, windowHeight * 0.90 - windowHeight * 0.1, windowHeight * 0.1, windowHeight * 0.1);
 
+      // Lines Sections
       let verticalLines = [];
       let horizontalLines = [];
 
-      for (let i = 1; i < 8; i++) {
-        verticalLines.push(
-          new Line(
-            i * (windowWidth / 8),
-            windowHeight * 0.5 - windowWidth * 0.5,
-            i * (windowWidth / 8),
-            windowHeight * 0.5 + windowWidth * 0.5,
-            "black")
-        );
-
-        horizontalLines.push(
-          new Line(
-            0,
-            windowHeight * 0.5 - i * (windowWidth / 8) + (windowWidth * 0.5),
-            windowHeight * 0.5 + windowWidth * 0.5,
-            windowHeight * 0.5 - i * (windowWidth / 8) + (windowWidth * 0.5),
-            "black")
-        );
+      // Array Section
+      let boxes = [];
+      let color = false;
+      for(let i=1;i<=8;i++){
+        let lineBoxes = [];
+        for(let j=0;j<8;j++){
+          lineBoxes.push(
+            new Rectangle(
+              j * (windowWidth/8),
+              windowHeight*0.2 + (i * (windowWidth/8))+10,
+              (windowWidth/8),
+              (windowWidth/8),
+              "#00000000",
+              color?"brown":"#d2a367")
+          );
+          color = !color;
+        }
+        color = !color;
+        boxes.push(lineBoxes);
       }
+
+      console.log(boxes);
+
+      // for (let i = 1; i < 8; i++) {
+      //   verticalLines.push(
+      //     new Line(
+      //       i * (windowWidth / 8),
+      //       windowHeight * 0.5 - windowWidth * 0.5,
+      //       i * (windowWidth / 8),
+      //       windowHeight * 0.5 + windowWidth * 0.5,
+      //       "black")
+      //   );
+
+      //   horizontalLines.push(
+      //     new Line(
+      //       0,
+      //       windowHeight * 0.5 - i * (windowWidth / 8) + (windowWidth * 0.5),
+      //       windowHeight * 0.5 + windowWidth * 0.5,
+      //       windowHeight * 0.5 - i * (windowWidth / 8) + (windowWidth * 0.5),
+      //       "black")
+      //   );
+      // }
 
       canvas.drawCanvas();
 
-      let shapesBoard = [...[midRect, playerOneSection, playerOneFace, playerTwoSection, playerTwoFace], [...verticalLines], [...horizontalLines]].flat();
+      let shapesBoard = [...[midRectImage, playerOneFaceImage, playerTwoFaceImage], [...verticalLines], [...horizontalLines], [...boxes].flat()].flat();
 
       canvas.setShapes(shapesBoard);
 
