--- a/games/Checkers/index.html
+++ b/games/Checkers/index.html
@@ -52,7 +52,7 @@
           lineBoxes.push(
             new Rectangle(
               j * (windowWidth/8),
-              windowHeight*0.2 + (i * (windowWidth/8))+10,
+              windowHeight*0.2 + (i * (windowWidth/8)),
               (windowWidth/8),
               (windowWidth/8),
               "#00000000",
