--- a/games/Checkers/index.html
+++ b/games/Checkers/index.html
@@ -88,7 +88,7 @@
 
       canvas.drawCanvas();
 
-      let shapesBoard = [...[midRectImage, playerOneFaceImage, playerTwoFaceImage], [...verticalLines], [...horizontalLines], [...boxes].flat()].flat();
+      let shapesBoard = [...[playerOneFaceImage, playerTwoFaceImage], [...verticalLines], [...horizontalLines], [...boxes].flat()].flat();
 
       canvas.setShapes(shapesBoard);
 
