--- a/games/Checkers/index.html
+++ b/games/Checkers/index.html
@@ -26,7 +26,7 @@
       let windowWidth = window.innerWidth;
       let windowHeight = window.innerHeight;
 
-      let canvas = new createCanvas(windowWidth, windowHeight, "border:1px dotted black;background: white;");
+      let canvas = new createCanvas(windowWidth, windowHeight, "border:1px dotted black;background: black;");
 
       // middle box
       let midRectImage = new SpriteImage("images/woodTexture.jpg",0, windowHeight * 0.5 - windowWidth * 0.5, windowWidth - 2, windowWidth, "black", "#f0d9b5");
