--- a/index.html
+++ b/index.html
@@ -109,25 +109,25 @@
                         <div class="card">
                             <img class="card-img-top" src="images/carousel/game1.png" alt="Card image cap">
                             <div class="card-body">
-                                <h1 class="card-text">Tic Tac Toe</h1>
+                                <h3 class="card-text">Tic Tac Toe</>
                             </div>
                         </div>
                         <div class="card">
                             <img class="card-img-top" src="images/carousel/game2.png" alt="Card image cap">
                             <div class="card-body">
-                                <h1 class="card-text">Checkers</h1>
+                                <h3 class="card-text">Checkers</h3>
                             </div>
                         </div>
                         <div class="card">
                             <img class="card-img-top" src="images/carousel/game3.png" alt="Card image cap">
                             <div class="card-body">
-                                <h1 class="card-text">Connect 4</h1>
+                                <h3 class="card-text">Connect 4</h3>
                             </div>
                         </div>
                         <div class="card">
                             <img class="card-img-top" src="images/carousel/game1.png" alt="Card image cap">
                             <div class="card-body">
-                                <h1 class="card-text">Ping Pong</h1>
+                                <h3 class="card-text">Ping Pong</h3>
                             </div>
                         </div>
                     </div>
@@ -345,8 +345,6 @@
                                 Happy Playing &#128516;
                                 <br><br>
                                 <button type="button" class="btn btn-danger text-light" data-bs-dismiss="modal">Close</button>
-                                <br><br>
-                                <br><br>
                             </p>
                         </div>
                     </div>
