adjustment in board

--- a/games/tictactoe/index.html
+++ b/games/tictactoe/index.html
@@ -68,7 +68,7 @@
             new SpriteImage(
               "images/game1.png",
               j * (windowWidth / 3),
-              windowHeight * 0.2 + (i * (windowWidth / 3)) - ((windowWidth / 3)/2)-15,
+              (((i*(windowWidth / 3)) + (windowHeight*0.5))-(windowWidth/3))-(windowWidth/2),
               (windowWidth / 3),
               (windowWidth / 3)
             )
