added tictactoe rules

--- a/src/games/tictactoe/index.html
+++ b/src/games/tictactoe/index.html
@@ -221,7 +221,13 @@
           document.querySelector(".modal-body").innerHTML = `
             <h4>*Game Rules*</h4>
             <p class="text-center">
-              
+              Tic-Tac-Toe is a classic game played on a 3x3 grid. The rules are simple:
+<br><br>
+1. Two players take turns marking spaces in the grid with either an "X" or an "O".<br>
+2. The first player to get three of their marks in a row (horizontally, vertically, or diagonally) wins.<br>
+3. If all spaces are filled without any player achieving three in a row, the game is a draw.<br>
+4. Players cannot mark a space that is already occupied.<br><br>
+That's pretty much it! It's a game of strategy and quick thinking.
             </p>
           `;
           
