added loading screen

--- a/src/games/tictactoe/index.html
+++ b/src/games/tictactoe/index.html
@@ -32,8 +32,8 @@
   <script>
     let windowWidth = window.innerWidth;
     let windowHeight = window.innerHeight;
-    let playerOneTimer = new Rectangle(windowWidth*0.0, 0 , windowWidth/2 , "2", 'lightgreen', 'lightgreen');
-    let playerTwoTimer = new Rectangle(windowWidth*0.5, 0 , windowWidth/2 , "2", 'lightgreen', 'lightgreen');
+    let playerOneTimer = new Rectangle(windowWidth*0.0, windowHeight*0.1 , windowWidth/2 , "2", 'lightgreen', 'lightgreen');
+    let playerTwoTimer = new Rectangle(windowWidth*0.5, windowHeight*0.1 , windowWidth/2 , "2", 'lightgreen', 'lightgreen');
     let countTiming = 0;
     let gameTimer = setInterval(()=>{},1000);
     let check = [];
@@ -134,6 +134,7 @@
         if(!turn){
           playerOneTimer.width = playerOneTimer.width - ((windowWidth*0.5)/60);
           let count = Math.floor(playerOneTimer.width/((windowWidth*0.5)/60));
+          // #ff0000 #ffa500 #ffff00 #40e0d0 #90ee90
           if(count<=0) {
             playerTwoWon();
           }
@@ -161,6 +162,7 @@
           playerTwoTimer.x = playerTwoTimer.x + ((windowWidth*0.5)/60);
           playerTwoTimer.width = playerTwoTimer.width + ((windowWidth*0.5)/60);
           let count = Math.floor((60-(playerTwoTimer.width-windowWidth*0.5)/((windowWidth*0.5)/60)));
+          // #ff0000 #ffa500 #ffff00 #40e0d0 #90ee90
           if(count<=0) {
             playerOneWon();
           }
@@ -187,7 +189,7 @@
         if(countTiming%2 == 0){
           document.querySelector("#statusParagraph").style.display = "block";
         }
-        console.log(playerOneTimer.width);
+        // console.log(playerOneTimer.width);
       },1000);
 
       function resetGame() {
@@ -218,8 +220,8 @@
         xwins=false;
         owins=false;
         drawwins=false;
-        playerOneTimer = new Rectangle(windowWidth*0.0, 0 , windowWidth/2 , "2", 'lightgreen', 'lightgreen');
-        playerTwoTimer = new Rectangle(windowWidth*0.5, 0 , windowWidth/2 , "2", 'lightgreen', 'lightgreen');
+        playerOneTimer = new Rectangle(windowWidth*0.0, 0 , windowWidth/2 , windowHeight*0.1, 'turquoise', 'turquoise');
+        playerTwoTimer = new Rectangle(windowWidth*0.5, 0 , windowWidth/2 , windowHeight*0.1, 'turquoise', 'turquoise');
         document.querySelector(".playerTwoTimerNumber").innerHTML =  "01:00";
         document.querySelector(".playerOneTimerNumber").innerHTML =  "01:00";
       }
@@ -276,10 +278,10 @@
       let soundFlag = true, musicFlag = true;
 
       let playerOneFaceButtonHTML = document.getElementById('playerface1');
-      playerOneFaceButtonHTML.style.background = 'url("../../images/players-icons/P1.png") 50% 50% / cover no-repeat';
+      playerOneFaceButtonHTML.style.background = 'url("../../images/players-icons/P1.png") #111b27 50% 50% / cover no-repeat';
 
       let playerTwoFaceButtonHTML = document.getElementById('playerface2');
-      playerTwoFaceButtonHTML.style.background = 'url("../../images/players-icons/P4.png") 50% 50% / cover no-repeat';
+      playerTwoFaceButtonHTML.style.background = 'url("../../images/players-icons/P4.png") #111b27 50% 50% / cover no-repeat';
 
       let playerOneNameButtonHTML = document.getElementById('playerOneName');
       playerOneNameButtonHTML.innerHTML = `
@@ -448,6 +450,8 @@
       statusParagraph.classList.add('animate__animated');
       statusParagraph.classList.add('animate__bounceIn');
       document.body.appendChild(statusParagraph);
+
+      loadingScreen();
     }
   </script>
 </head>
